# MyLists

./: .gitignore  README.md  build_n_deploy.sh  migration.sql  package-lock.json  package.json  schema.sql
backend/: Cargo.toml  server.py
backend/src/: api.rs  app.rs  main.rs  sql.rs
backend/src/utils/: categories.csv  create_user.rs  insert.rs  items.csv  keys  login.rs  mod.rs  parse.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  AppBar.jsx  Column.jsx  Item.jsx  Task.jsx  initialData.js  login.jsx  modals.jsx  services.js  utilities.js
frontend/src/services/: data.js
public/: index.html  manifest.json
src/: App.jsx  Column.jsx  Task.jsx  index.js  initialData.js
