[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
serde =  { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1", features = ["full"] }


[[bin]]
name = "insert"
path = "src/utils/insert.rs"