[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
serde =  { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.1"
argon2 = "0.5.2"


[[bin]]
name = "insert"
path = "src/utils/insert.rs"


[[bin]]
name = "create_user"
path = "src/utils/create_user.rs"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
