[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["cookie"] }
cookie = { version = "0.16", features = ["secure"] }
serde =  { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1", features = ["full"] }
rpassword = "7.3"
env_logger = "0.10.1"
argon2 = "0.5.2"
regex = "1.10.2"
base64 = "0.21.5"
actix-session = { version = "0.8.0", features = ["cookie-session"] }


[[bin]]
name = "insert"
path = "src/utils/insert.rs"


[[bin]]
name = "create_user"
path = "src/utils/login.rs"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
